@@ -10,7 +10,8 @@ TGUI 0.8.6  (TBD)
 - Added VerticalScrollAmount and HorizontalScrollAmount to ScrollablePanel
 - Added functions to set and get scrollbar values in widgets that have a scrollbar
 - Added function to Slider to disallow changing the value by scrolling the mouse wheel (#104)
-- Added right mouse clicked signals to ClickableWidget and Panel
+- Added right mouse clicked signals to ClickableWidget (base class for several widgets) and Panel
+- Added HeaderClicked signal to ListView
 - Container widgets didn't pass right click event to child widgets
 - Widget state was incorrect when starting a show/hide animation while another was still busy
 - Disabling tabs widget caused selected tab to be deselected
